fix svg hero background transition on IE 10+

--- a/client/src/scss/_IE10+.scss
+++ b/client/src/scss/_IE10+.scss
@@ -22,7 +22,7 @@
     }
   }
 
-  #junk-pattern-gradient {
+  .junk-pattern-gradient {
     stop-color: currentColor;
   }
   // #junk-pattern-gradient-container {
